Syntax fix in CSS
adding a couple semicolons

--- a/app.css
+++ b/app.css
@@ -11,7 +11,7 @@
 }
 
 .inner-row{
-    padding-left:20px;margin-top:30px
+    padding-left:20px;margin-top:30px;
 }
 
 .polaroid{
@@ -28,7 +28,7 @@
 }
 
 .header {
-    margin-top:1px
+    margin-top:1px;
 }
     
 .header img{
